--- a/client/src/components/NodeView/NodeView.scss
+++ b/client/src/components/NodeView/NodeView.scss
@@ -23,9 +23,9 @@
     }
 
     .nodeView-scrollable {
-      position: relative;
-      height: 100%;
-      overflow-y: scroll;
+      // position: relative;
+      // height: 100%;
+      // overflow-y: scroll;
 
       .nodeView-breadcrumb {
         display: flex;
@@ -41,7 +41,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        padding-bottom: 100px;
+        // padding-bottom: 100px;
       }
     }
   }
